# torchbeam

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: cameradisplay.py
src/torchbeam/_ext/: torchbeam.cpp
src/torchbeam/_ext/include/: AravisCamera.h  CudaConvert.h  FakeCamera.h  ICamera.h  PixelFormat.h  TorchCamera.h  TorchTexture.h  TorchVideoDecoder.h  TorchVideoEncoder.h  Unpacking.h
src/torchbeam/_ext/src/: AravisCamera.cpp  CpuUnpacking.cpp  CudaConvert.cu  CudaUnpacking.cu  FakeCamera.cpp  TorchCamera.cpp  TorchTexture.cpp  TorchVideoDecoder.cpp  TorchVideoEncoder.cpp
src/torchbeam/aquire/: __init__.py  camera.py
src/torchbeam/display/: kivy.py
src/torchbeam/record/: __init__.py  videoreader.py  videowriter.py
src/torchbeam/utils/: __init__.py  profiling.py
tests/: test_record.py
